--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@ title: Zeren Simon Wang
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Zeren Simon Wang!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<!-- <p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p> -->
+	<p>I am a postdoctoral researcher on high-energy-physics phenomenology at the National Tsing Hua University, Taiwan. My research interests include physics beyond the standard model and collider physics phenomenology. </a></p>
 </div><!-- /.blurb -->
