--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Zeren Simon Wang
+title: Zeren Simon Wang's personal website
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Zeren Simon Wang!</h1>
